--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 pillow
 SimpleITK
-imagecodecs
+ultralytics==8.0.196
+opencv-python-headless
 numpy
+imagecodecs
 torch
 transformers
-ultralytics==8.0.196
-opencv-python
 libgl1-mesa-glx; sys_platform == 'linux'  # For Debian/Ubuntu based systems
 mesa-libGL; sys_platform == 'linux'  # For Red Hat based systems
